2022-09-26  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha09 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha09: Turning 30';git push
	git tag -a 5.1.1-alpha09 -m '';git push --tags

	* Simplify nco_fl_lst_stdin() prototype

2022-09-25  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha08 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha08: Sham Referendum';git push
	git tag -a 5.1.1-alpha08 -m 'all: NSB->NESB; ncks bgr->btg, bgb->bgr, stdin, chk_map bln xcp; ncremap nco_idw fix';git push --tags

	* Functionalize nco_fl_lst_stdin()

	* ncremap replace ConvertSCRIPToExodus (no longer exists) by ConvertMeshoExodus

	* ncks chk_map add INFO not scary WARNING when weights are intentionally non-conservative

	* map checker examins global attributes map_method, no_conserve, noconserve to determine whether weights are intentionally non-conservative

2022-09-23  Charlie Zender  <zender@uci.edu>

	* ncrename stdin search for input filenames works, though cannot copy from NCZarr to POSIX

	* ncks stdin search for input filenames works

	* ncremap replace general occurances of dwe with idw

	* ncremap fix bug where alg_opt=nco_idw (though not nco_dwe) was interpreted as nco_con

2022-09-22  Charlie Zender  <zender@uci.edu>

	* Change BitGroomBitRound and 'bgb' to BitGroomRound and 'bgr', respectively

	* Abbreviate BitGroom as 'btg' not 'bgr'

	* Shift NSB to NESB and/or "number of significant bits" to "number of stored bits"

2022-09-20  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha07 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha07: Cantalina';git push
	git tag -a 5.1.1-alpha07 -m 'all: ncz2psx works as intended; ncclimo sgs mdl_nm fix';git push --tags

2022-09-18  Charlie Zender  <zender@uci.edu>

	* ncclimo set mdl_nm to elm for prc_typ=sgs

2022-08-26  Charlie Zender  <zender@uci.edu>

	* Tidy nco_fl_utl.c to prepare to allow stdin filename access for all operators
